Fixed vertical aligning of image in grid element

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -73,6 +73,14 @@ text-align: center;
     text-align: center;
 }
 
+.vertical-align-grid-icon {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
 
 
 
